--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,17 +1,17 @@
 // Specific CSS for your home-page
-body {
-  background-image: url("https://images.unsplash.com/photo-1590479773265-7464e5d48118?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
+// body {
+//   background-image: url("https://images.unsplash.com/photo-1590479773265-7464e5d48118?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
+//   background-size: cover;
+//   background-position: center;
+//   height: 100vh;
+// }
 
-h1, h2 {
-  color: white;
+// h1, h2 {
+//   color: white;
 
-}
+// }
 
-.card-contruction {
-  margin-top: 60vh;
-  text-align: center;
-}
+// .card-contruction {
+//   margin-top: 60vh;
+//   text-align: center;
+// }
