--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -2,6 +2,7 @@
   <%= simple_form_for @device do |f| %>
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.association :category, collection: Category.order('name ASC') %>
     <%= f.input :price %>
     <%= f.input :description %>
     <%= f.input :pictures, as: :file, input_html: { multiple: true } %>
