--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
-<div class="container">
-  <div class="card-contruction">
-    <h1>Our mervellous team is working very hard to create this website!</h1>
-    <h2>See you soon !!!</h2>
-  </div>
+<div class="construction">
+  <div class="container">
+    <div class="card-contruction">
+      <h1>Our mervellous team is working very hard to create this website!</h1>
+      <h2>See you soon !!!</h2>
+    </div>
 
-  <%= link_to "devices", devices_path %>
+    <%= link_to "devices", devices_path %>
+  </div>
 </div>
 
