--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -7,6 +7,7 @@
       <%= device.price %>
       <%= link_to "details", device_path(device)  %>
       <%= link_to "edit", edit_device_path(device) %>
+      <%= link_to 'destroy', device_path(device), method: :delete, data: { confirm: 'Are you sure?' } %>
       </li>
     <% end %>
   </ul>
