nestage du rental

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -5,4 +5,4 @@
   <%= @device.user_id %>
 </div>
 
-<%= link_to "new rental", new_rentals_path(@device, @rental) %>
+<%= link_to "new rental", new_device_rental_path(@device, @rental) %>
