integration validate refused dans index rentals

--- a/app/views/rentals/show.html.erb
+++ b/app/views/rentals/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner-detail" >
+<!-- <div class="banner-detail" >
   <div class="banner-content">
     <h1>My reservation</h1>
   </div>
@@ -6,7 +6,7 @@
 
 <div class="container description-rental">
   <h2><%= @rental.device.name %></h2>
-  <div class="description-look"> 
+  <div class="description-look">
   <%= @rental.device.description %>
   <%= @rental.device.price %>
   <p>Start date :</p><%= @rental.start_date.strftime('%d/%m/%Y') %>
@@ -18,4 +18,4 @@
   <%= link_to "Refuse", refused_rental_path, class:"btn btn-danger", method: :patch %>
 </div>
 
-
+ -->
