basic option flatpickr ok

--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <%= simple_form_for([@device, @rental]) do |f| %>
   <div class="form-inputs">
-    <%= f.input :start_date %>
-    <%= f.input :end_date %>
+    <%= f.input :start_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
+    <%= f.input :end_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
     <!-- <p class="d-none"><%= f.input_field :device_id, value: @device.id %></p> -->
   </div>
   <div class="form-actions">
