banner home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="construction">
+<!-- <div class="construction">
   <div class="container">
     <div class="card-contruction">
       <h1>Our mervellous team is working very hard to create this website!</h1>
@@ -9,4 +9,5 @@
 
   </div>
 </div>
-
+ -->
+<%= render 'shared/banner' %>
