--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,8 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   position: bottom;
+  bottom: 0;
+  width: 100%;
 }
 .footer-links {
   display: flex;
