--- a/app/views/account/rentals/index.html.erb
+++ b/app/views/account/rentals/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <div class="container">
   <h2>Rentals faites par le user</h2>
   <% @rentals_done.each do |rental| %>
@@ -32,3 +33,4 @@
     <% end %>
   <% end %>
 </div>
+<%= render 'shared/footer' %>
