--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <div class="container">
   <%= simple_form_for (@device) do |f| %>
   <div class="form-inputs">
@@ -12,3 +13,4 @@
   </div>
   <% end %>
 </div>
+<%= render 'shared/footer' %>
