--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <div class="container">
   <%= simple_form_for([@device, @rental]) do |f| %>
   <div class="form-inputs">
@@ -10,3 +11,4 @@
   </div>
   <% end %>
 </div>
+<%= render 'shared/footer' %>
