--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -27,3 +28,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+<%= render 'shared/footer' %>
