--- a/app/views/shared/_navbar_index.html.erb
+++ b/app/views/shared/_navbar_index.html.erb
@@ -11,6 +11,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
+        <li class="nav-item active">
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </li>
         <li class="nav-item">
           <% user = current_user %>
           <%= link_to user.first_name, account_rentals_path, class: "nav-link" %>
