--- a/app/views/shared/_navbar_index.html.erb
+++ b/app/views/shared/_navbar_index.html.erb
@@ -7,7 +7,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
+  <%= link_to "AirFoodParty", "/", class: 'navbar-brand'  %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
