--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/navbar_index' %>
+<%= render 'shared/navbar' %>
 <div class="container">
   <ul>
     <% @devices.each do |device| %>
