--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,9 @@
   <div class="container">
     <h1>Our mervellous team is working very hard to create this website!</h1>
     <p>See you soon !!!</p>
-    <%= link_to "Apply now", devices_path, class: 'btn btn-primary' %>
+    <form class="form-inline" method="get" action="/devices">
+    <input class="form-control mr-sm-2" type="search" placeholder="What's your city ?" aria-label="Search">
+    <%= link_to "Search", devices_path, class: 'btn btn-primary' %>
+  </form>
   </div>
 </div>
