--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.association :category, collection: Category.order('name ASC') %>
     <%= f.input :price %>
     <%= f.input :description %>
-    <%= f.input :pictures, as: :file, input_html: { multiple: true } %>
+    <%= f.input :photo, as: :file %>
   </div>
   <div class="form-actions">
     <%= f.submit 'Add a device', class: 'btn btn-primary' %>
