--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -30,4 +30,9 @@
       <% end %>
   </div>
 </div>
-<%= render 'shared/footer' %>
+<div>
+  <p>je suis là</p>
+</div>
+<div>
+  <%= render 'shared/footer' %>
+</div>
