--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,9 +1,30 @@
 <%= render 'shared/navbar' %>
 <div class="container">
-  <%= @device.name %>
-  <%= @device.description %>
-  <%= @device.price %>
-  <%= @device.user_id %>
-  <%= link_to "new rental", new_device_rental_path(@device, @rental) %>
+  <div class="title">
+    <h1 class="text-center pt-3"><%= @device.name %></h1>
+  </div>
+  <div class="d-flex">
+    <div class="col-md-4">
+      <% if @device.photo.attachment %>
+            <%= cl_image_tag @device.photo.key, height: 300, width: 300, crop: :fill, class: 'card-img' %>
+      <% end %>
+    </div>
+      <div class="pl-3">
+        <h4>Description:</h4>
+        <p><%= @device.description %></p>
+        <h4>Price per day:</h4>
+        <p><%= @device.price %>€/day</p>
+        <% @user = User.find(@device.user_id) %>
+        <h4>Owner:</h4>
+        <p><%= @user.first_name %></p>
+        <h4>Owner address:</h4>
+        <p><%= @user.address%></p>
+      </div>
+  </div>
+  <div class="pt-3 text-center">
+      <%= link_to "New rental", new_device_rental_path(@device, @rental), class: 'btn btn-info' %>
+      <%= link_to "Edit device", edit_device_path(@device), class: 'btn btn-success'  %>
+      <%= link_to 'Destroy device', device_path(@device), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'  %>
+    </div>
 </div>
 <%= render 'shared/footer' %>
