--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -30,9 +30,6 @@
       <% end %>
   </div>
 </div>
-<div>
-  <p>je suis là</p>
-</div>
-<div>
-  <%= render 'shared/footer' %>
-</div>
+<%= render 'shared/footer' %>
+<% console %>
+
