avatar titles banner

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1463183427169-5df5a06d5447?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1571162242324-f1607b1eceaa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
   <div class="container">
-    <h1>Our mervellous team is working very hard to create this website!</h1>
-    <p>See you soon !!!</p>
+    <h1>Welcome to AirFoodParty!!</h1>
+    <p>Let's go and rent your favorite food party device : Raclette, Pierrade, Crêpe party or a Pop Corn machine !!!</p>
     <form class="form-inline" method="get" action="/devices">
     <input class="form-control mr-sm-2" type="search" placeholder="What's your city ?" aria-label="Search">
     <%= link_to "Search", devices_path, class: 'btn btn-primary' %>
