--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,5 +1,7 @@
 <%= render 'shared/navbar' %>
 <div class="container">
+  <h1 class="text-center pt-3">Enter all details of your device</h1>
+  <p class="text-center pt-3">Consider putting all nice info</p>
   <%= simple_form_for @device do |f| %>
   <div class="form-inputs">
     <%= f.input :name %>
