--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,5 +1,7 @@
 <%= render 'shared/navbar' %>
 <div class="container">
+  <h1 class="text-center pt-3">What dates you'd like to enjoy the <%= @device.name %></h1>
+  <p class="text-center pt-3"> Details of the device : <%= @device.description %> </p>
   <%= simple_form_for([@device, @rental]) do |f| %>
   <div class="form-inputs">
     <%= f.input :start_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
