border radius img card ok

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,9 @@ p {
 .card {
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  & img {
+    border-radius: 10px 0px 0px 0px;
+  }
 }
 
 .card-title {
