--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :address %>
-    <%= f.input :avatar, as: :file %>
+    <%= f.input :photo, as: :file %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
