--- a/app/views/devices/_info_window.html.erb
+++ b/app/views/devices/_info_window.html.erb
@@ -1,4 +1,9 @@
 <h4>owner :<br></h4><p><%= user.first_name %><br><%= user.address %><br>telephone</p>
 <% user.devices.each do |device|%>
-<%= device.name %><br>
+<div>
+  <% if device.photo.attachment %>
+      <%= cl_image_tag device.photo.key, height: 50, width: 50, crop: :fill %>
+  <% end %>
+  <%= device.name %>
+</div>
 <% end %>
