--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,6 +6,11 @@
   width: 56px;
   border-radius: 50%;
 }
+
+.avatar-xl {
+  width: 128px;
+  border-radius: 50%;
+}
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
