--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,27 +1,47 @@
 <%= render 'shared/navbar' %>
 <div class="container">
   <div class="general-info">
-    <h1 class="text-center pt-3">What dates you'd like to enjoy the <%= @device.name %> </h1>
-      <p class="text-center pt-3"> Details of the device : <%= @device.description %> </p>
+    <h1 class="text-center pt-3">
+      <%= cl_image_tag @device.photo.key, :transformation=>[
+  {:width=>500, :height=>500, :gravity=>"face", :radius=>"max", :crop=>"crop"},
+  {:width=>400, :crop=>"scale"}
+  ], class: "avatar-xl dropdown-toggle"%>
+      When do you like to enjoy the <%= @device.name %> </h1>
+      <p class="text-center pt-3"> Remember details of the device: <%= @device.description %> </p>
   </div>
   <div class="rental-details">
     <div class="row">
       <div class="owner-info">
-        <h2>Owner of device is <%= User.find(@device.user_id).first_name %></h2>
-        <p>Address : <%= User.find(@device.user_id).address %> </p>
+        <h4>Details of AirFooder</h4>
+        <p> <%= cl_image_tag @device.user.photo.key, :transformation=>[
+  {:width=>500, :height=>500, :gravity=>"face", :radius=>"max", :crop=>"crop"},
+  {:width=>400, :crop=>"scale"}
+  ], class: "avatar-large dropdown-toggle"%>
+        </p>
+        <p>Name: <%= User.find(@device.user_id).first_name %></p>
+        <p>Address: <%= User.find(@device.user_id).address %> </p>
+        <p>Phone:
+          <!-- <%= User.find(@device.user_id).address %> -->
+        </p>
       </div>
-      <%= simple_form_for([@device, @rental]) do |f| %>
-      <div class="form-inputs">
-        <%= f.input :start_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
-        <%= f.input :end_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
-        <!-- <p class="d-none"><%= f.input_field :device_id, value: @device.id %></p> -->
+      <div class="form-rental">
+        <h4>Date of rental</h4>
+        <%= simple_form_for([@device, @rental]) do |f| %>
+        <div class="form-inputs">
+          <%= f.input :start_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
+          <%= f.input :end_date,  as: :string, required: true, input_html: {class: "datepicker"} %>
+          <!-- <p class="d-none"><%= f.input_field :device_id, value: @device.id %></p> -->
+        </div>
+        <div class="form-actions">
+          <%= f.submit 'Send rental demand', class: 'btn btn-primary' %>
+        </div>
+        <% end %>
       </div>
-      <div class="form-actions">
-        <%= f.submit 'New rental', class: 'btn btn-primary' %>
-      </div>
-      <% end %>
-      <div class="rental-datas" data-price = "<%= @device.price %>">
-        <p> </p>
+      <div class="rental-datas-sumup">
+          <h4>Your rental</h4>
+        <div class="rental-datas" data-price = "<%= @device.price %>">
+          <p> Please enter start date and end date </p>
+        </div>
 
       </div>
     </div>
