--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,14 +3,19 @@
     <%= image_tag "https://www.flaticon.com/svg/static/icons/svg/3754/3754009.svg" %>
     <% end %>
 
-  <%= form_tag devices_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find a movie"
-  %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-  <% end %>
+    <%= form_tag devices_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "What do you search?"
+    %>
+    <%= text_field_tag :address,
+      params[:address],
+      class: "form-control",
+      placeholder: "Address?"
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
