--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="action text-center">
-          <%= link_to "See the details of the device", device_path(device), class: 'btn btn-primary'%>
+          <%= link_to "See the details of the device", device_path(device), class: 'btn-detail'%>
           <%= link_to "New rental", new_device_rental_path(device, @rental), class: 'btn btn-info' %>
         </div>
       </div>
