--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
-
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -18,3 +17,7 @@
   font-size: 30px;
 }
 
+.fields {
+  margin-top: 1em;
+  display: flex;
+}
