--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,33 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to devices_path, class: "navbar-brand" do %>
-    <%= image_tag "https://www.flaticon.com/svg/static/icons/svg/3754/3754009.svg" %>
-    <% end %>
-
+  <div>
+    <%= link_to devices_path, class: "navbar-brand" do %>
+      <%= image_tag "https://www.flaticon.com/svg/static/icons/svg/3754/3754009.svg" %>
+      <% end %>
+  </div>
+  <div>
     <%= form_tag devices_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "What do you search?"
-    %>
-    <%= text_field_tag :address,
-      params[:address],
-      class: "form-control",
-      placeholder: "Address?"
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
+    <div class="fields">
+      <p>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "What do you search?"
+        %>
+      </p>
+      <p>
+        <%= text_field_tag :address,
+          params[:address],
+          class: "form-control",
+          placeholder: "Address?"
+        %>
+      <p>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+        <% end %>
+      </p>
+      </p>
+
+    </div>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
