phone_number avatar

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -18,7 +18,10 @@
         <h4>Owner:</h4>
         <p><%= @user.first_name %></p>
         <h4>Owner address:</h4>
-        <p><%= @user.address%></p>
+        <p><%= @user.address %></p>
+        <h4>Owner phone number:</h4>
+        <p><%= @user.phone_number %></p>
+        <% console %>
       </div>
   </div>
   <div class="pt-3 text-center">
