--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,7 @@
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :address %>
+    <%= f.input :phone_number %>
     <%= f.input :photo, as: :file %>
     <%= f.input :password,
                 required: true,
