--- a/app/views/account/rentals/index.html.erb
+++ b/app/views/account/rentals/index.html.erb
@@ -4,12 +4,25 @@
   <div>
     <% @rentals_done.each do |rental| %>
       <div class="container description-rental mb-3">
-          <h2 class="pt-2"><%= rental.device.name %></h2>
-      <div class="description-look d-flex">
-        <p><strong>Price per day :</strong></p> <p class="pr-4"><%= rental.device.price %></p>
-        <p><strong>Start date :</strong></p> <p class="pr-4"><%= rental.start_date.strftime('%d/%m/%Y') %></p>
-        <p><strong>End date :</strong></p><p class="pr-4"><%= rental.end_date.strftime('%d/%m/%Y') %></p>
-        <p><strong>State :</strong></p><p class="pr-4"><%= rental.state %></p>
+      <div class="device-name d-flex flex-row">
+          <h2 class="pt-2"><%= rental.device.name %>
+          <%= cl_image_tag rental.device.user.photo.key, :transformation=>[
+  {:width=>400, :height=>400, :gravity=>"face", :radius=>"max", :crop=>"crop"},
+  {:width=>200, :crop=>"scale"}
+  ], class: "avatar " %>
+          </h2>
+      </div>
+      <div class="description-look">
+        <div class="user-info d-flex flex-row">
+        <p><strong>Owner address :&nbsp</strong></p> <p class="pr-4"><%= rental.device.user.address %></p>
+        <p><strong>Owner phone_number :&nbsp</strong></p> <p class="pr-4"><%= rental.device.user.phone_number %></p>
+        </div>
+        <div class="date-info d-flex flex-row">
+        <p><strong>Price per day :&nbsp</strong></p> <p class="pr-4"><%= rental.device.price %></p>
+        <p><strong>Start date :&nbsp</strong></p> <p class="pr-4"><%= rental.start_date.strftime('%d/%m/%Y') %></p>
+        <p><strong>End date :&nbsp</strong></p><p class="pr-4"><%= rental.end_date.strftime('%d/%m/%Y') %></p>
+        <p><strong>State :&nbsp</strong></p><p class="pr-4"><%= rental.state %></p>
+        </div>
       </div>
       </div>
     <% end %>
@@ -20,17 +33,33 @@
     <% @rentals_on_user_device.each do |rental| %>
       <div class="container description-rental mb-3">
         <h2 class="pt-2"><%= rental.device.name %></h2>
-      <div class="description-look d-flex">
-        <p><strong>Price per day :</strong></p> <p class="pr-4"><%= rental.device.price %></p>
-        <p><strong>Start date :</strong></p> <p class="pr-4"><%= rental.start_date.strftime('%d/%m/%Y') %></p>
-        <p><strong>End date :</strong></p><p class="pr-4"><%= rental.end_date.strftime('%d/%m/%Y') %></p>
-        <p><strong>State :</strong></p><p class="pr-4"><%= rental.state %></p>
+      <div class="description-look">
+        <div class="rental-on-ur-device d-flex flex-row">
+        <p class= "d-flex align-items-center"><strong>Your device is rented by :&nbsp</strong></p>
+        <p class="pr-4 d-flex align-items-center">
+          <%= rental.user.full_name %>&nbsp &nbsp
+          <%= cl_image_tag rental.user.photo.key, :transformation=>[
+          {:width=>400, :height=>400, :gravity=>"face", :radius=>"max", :crop=>"crop"},
+          {:width=>200, :crop=>"scale"}   
+          ], class: "avatar " %>
+        </p>
+        </div>
+        <div class="user-info d-flex flex-row">
+        <p><strong>Owner address :&nbsp</strong></p> <p class="pr-4"><%= rental.device.user.address %></p>
+        <p><strong>Owner phone_number :&nbsp</strong></p> <p class="pr-4"><%= rental.device.user.phone_number %></p>
+        </div>
+        <div class="date-info d-flex flex-row">
+        <p><strong>Price per day :&nbsp</strong></p> <p class="pr-4"><%= rental.device.price %></p>
+        <p><strong>Start date :&nbsp</strong></p> <p class="pr-4"><%= rental.start_date.strftime('%d/%m/%Y') %></p>
+        <p><strong>End date :&nbsp</strong></p><p class="pr-4"><%= rental.end_date.strftime('%d/%m/%Y') %></p>
+        <p><strong>State :&nbsp</strong></p><p class="pr-4"><%= rental.state %></p>
         <% if rental.state == "pending" %>
           <div class="accept-refuse">
             <%= link_to "Validate", validated_account_rental_path(rental), class:"btn btn-primary", method: :patch, data: { confirm: 'Are you sure?' } %>
             <%= link_to "Refuse", refused_account_rental_path(rental), class:"btn btn-danger", method: :patch, data: { confirm: 'Are you sure?' } %>
           </div>
         <% end %>
+        </div>
       </div>
     </div>
     <% end %>
