--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
                 input_html: { autocomplete: "email" }%>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
-    <%= f.input :address %>
+    <%= f.input :address, id: "user_address" %>
     <%= f.input :phone_number %>
     <%= f.input :photo, as: :file %>
     <%= f.input :password,
