navbar search et alignée

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  align-content: center;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -17,7 +18,28 @@
   font-size: 30px;
 }
 
-.fields {
-  margin-top: 1em;
+.search-form {
+  width: 40em;
+  padding: 0.5em;
+  height: 4em;
+  align-items: start;
+
+  & .fields {
   display: flex;
+  flex-direction: row;
+  align-content: center;
+  height: 3.3em;
+  align-items: center;
+
+    & .search-input {
+      margin-left: 1em;
+      height: 2.5em;
+      align-items: start;
+
+    }
+  }
+
+  & .form-control {
+    border-radius: 25px;
+  }
 }
