--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,6 +10,8 @@
   display: flex;
   justify-content: space-between;
   border: solid 0.1em $red;
+  align-content: center;
+  align-items: center;
 
   &:hover {
     background-color: white;
@@ -19,5 +21,4 @@
   }
 
 }
-
 
