--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,28 +4,26 @@
       <%= image_tag "https://www.flaticon.com/svg/static/icons/svg/3754/3754009.svg" %>
       <% end %>
   </div>
-  <div>
+  <%= link_to "AirFoodParty", "/", class: 'navbar-brand navbar-title'  %>
+  <div class="search-form">
     <%= form_tag devices_path, method: :get do %>
     <div class="fields">
-      <p>
+      <div class="search-input">
         <%= text_field_tag :query,
           params[:query],
           class: "form-control",
           placeholder: "What do you search?"
         %>
-      </p>
-      <p>
+      </div >
+      <div class="search-input">
         <%= text_field_tag :address,
           params[:address],
           class: "form-control",
           placeholder: "Address?"
         %>
-      <p>
-        <%= submit_tag "Search", class: "btn btn-primary" %>
+      </div >
+         <%= submit_tag "Search", class: "search-input btn-detail" %>
         <% end %>
-      </p>
-      </p>
-
     </div>
   </div>
 
@@ -33,7 +31,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <%= link_to "AirFoodParty", "/", class: 'navbar-brand navbar-title'  %>
+
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
