btn add device et new rental

--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,4 +1,5 @@
 .quote-bckg {
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(255, 255, 255, 0.73)), url("https://images.unsplash.com/photo-1522100077728-4fae00f560c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1581&q=80");
-  background-position: top;
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(255, 255, 255, 0.73)), url("https://images.unsplash.com/photo-1512149154706-f9b30ded17ad?ixlib=rb-1.2.1&auto=format&fit=crop&w=680&q=80");
+  background-position: center;
+  background: contain;
 }
