--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -25,6 +25,13 @@
   .cards {
     grid-template-columns: 1fr;
   }
+
+  .card-device {
+    & .img-device {
+      display: none;
+    }
+  }
+
   #map {
     display: none;
   }
