--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -33,7 +33,7 @@
           <!-- <p class="d-none"><%= f.input_field :device_id, value: @device.id %></p> -->
         </div>
         <div class="form-actions">
-          <%= f.submit 'Send rental demand', class: 'btn btn-primary' %>
+          <%= f.submit 'Send rental demand', class: 'btn-detail' %>
         </div>
         <% end %>
       </div>
