--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,18 +10,20 @@
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 40px;
+  margin: 1em 0;
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 24px;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  margin:  1em 0;
 }
 
 .form-control {
   max-width: 300px;
   margin-right: 20px;
+  border-radius: 25px;
 }
