--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,9 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1571162242324-f1607b1eceaa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
   <div class="container">
     <h1>Welcome to AirFoodParty!!</h1>
-    <p>Let's go and rent your favorite food party device : Raclette, Pierrade, Crêpe party or a Pop Corn machine !!!</p>
+    <p>
+      <span id="banner-typed-text"></span>
+    </p>
     <%= form_tag devices_path, method: :get do %>
     <div class="d-flex">
     <%= text_field_tag :address,
@@ -9,9 +11,10 @@
       class: "form-control",
       placeholder: "What's your city?"
     %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <%= submit_tag "Search", class: "btn-detail" %>
+    <%= link_to "Sign up", new_user_session_path, class: "btn-light" %>
     </div>
     <% end %>
-  </form>
+
   </div>
 </div>
