--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -169,13 +169,13 @@
   }
 }
 
-// Rental sho card
+// Rental show card
 
 .show-card {
   display: flex;
   border: gray solid 0.1em;
   border-radius: 25px;
-  background-color: white;
+  background-color: #e5e3e3;
   flex-direction: column;
   margin: 0.5em;
   padding: 0.5em;
@@ -216,6 +216,7 @@
         border: gray solid 0.1em;
         border-radius: 10px;
         margin: 0.5em;
+        background-color: #f2f2f2;
       }
 
       & .device-info {
