lien vers show sur info carte

--- a/app/views/devices/_info_window.html.erb
+++ b/app/views/devices/_info_window.html.erb
@@ -4,6 +4,6 @@
   <% if device.photo.attachment %>
       <%= cl_image_tag device.photo.key, height: 50, width: 50, crop: :fill %>
   <% end %>
-  <%= device.name %>
+  <%= link_to device.name, device_path(device) %>
 </div>
 <% end %>
