--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,9 @@
   justify-content: space-between;
   background: white;
   align-content: center;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
 }
 
 .navbar-lewagon .navbar-collapse {
