page new rental ok

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -100,7 +100,7 @@
     width: 15em;
     border-radius: 10px;
     border: solid silver 0.1em;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background-color: #F2F2F2;
   }
 
   & .form-rental {
@@ -110,7 +110,7 @@
     width: 15em;
     border-radius: 10px;
     border: solid silver 0.1em;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background-color: #F2F2F2;
   }
 
   & .rental-datas-sumup {
@@ -120,7 +120,7 @@
     width: 15em;
     border-radius: 10px;
     border: solid silver 0.1em;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background-color: #F2F2F2;
 
     & #total {
       font-size: 24px;
