--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-align: center;
   min-width: 21em;
+  max-height: 19em;
   background-color: #e5e3e3;
 
   & p {
