--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -16,7 +16,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: $red;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
