--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -15,7 +15,16 @@
   min-width: 30em;
   height: 100vh;
   position: sticky;
-  top: 0;
+  top: 170px;
+}
+
+.devices-proposal {
+  width: 100%;
+
+    h6 {
+      text-align: left;
+      padding-left: 5px;
+    }
 }
 
 /*Media Queries*/
