--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,9 +2,10 @@
   justify-content: space-between;
   background: white;
   align-content: center;
-  // position: fixed;
-  // top: 0;
-  // width: 100%;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .navbar-lewagon .navbar-collapse {
