new devices front ok

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,7 +70,20 @@
 }
 
 
+// new device
 
+.form-center {
+  margin: 0 auto;
+  width: 500px;
+}
+
+.form-device {
+  padding-left: 90px;
+}
+
+.form-btn {
+  padding-left: 160px;
+}
 
 
 // rental form card
