--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,18 +1,20 @@
 <%= render 'shared/navbar' %>
-<div class="container">
-  <h1 class="text-center pt-3">Enter all details of your device</h1>
-  <p class="text-center pt-3">Consider putting all nice info</p>
-  <%= simple_form_for @device do |f| %>
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.association :category, collection: Category.order('name ASC') %>
-    <%= f.input :price %>
-    <%= f.input :description %>
-    <%= f.input :photo, as: :file %>
+<div class="quote-bckg">
+  <div class="container form-center">
+    <h1 class="text-center pt-3">Enter all details of your device</h1>
+    <p class="text-center pt-3">Consider putting all nice info</p>
+    <%= simple_form_for @device do |f| %>
+    <div class="form-device">
+      <%= f.input :name %>
+      <%= f.association :category, collection: Category.order('name ASC') %>
+      <%= f.input :price %>
+      <%= f.input :description %>
+      <%= f.input :photo, as: :file %>
+    </div>
+    <div class="form-btn pt-2">
+      <%= f.submit 'Add a device', class: 'btn-detail' %>
+    </div>
+    <% end %>
   </div>
-  <div class="form-actions">
-    <%= f.submit 'Add a device', class: 'btn btn-primary' %>
-  </div>
-  <% end %>
 </div>
 <%= render 'shared/footer' %>
