Sign up front ok

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,7 +70,7 @@
 }
 
 
-// new device
+// new/edit device et sign up/log in
 
 .form-center {
   margin: 0 auto;
@@ -85,6 +85,9 @@
   padding-left: 160px;
 }
 
+.form-regis {
+  padding-left: 185px;
+}
 
 // rental form card
 
