--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,12 @@
 <%= render 'shared/navbar' %>
-<h2>Sign up</h2>
+<div class="quote-bckg">
+<div class="container form-center">
+<h2 class="text-center pt-3">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-device">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -23,10 +25,10 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-regis pt-2">
+    <%= f.button :submit, "Sign up", class: 'btn-detail' %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+</div>
 <%= render 'shared/footer' %>
