--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -74,3 +74,15 @@
 
 }
 
+.btn-login {
+  padding-bottom: 100px;
+  padding-top: 30px;
+}
+
+.link-noir {
+  color: black;
+    &:hover {
+      text-decoration: none;
+      color: $red;
+    }
+}
